--- a/tex_files/chapter-shiny.tex
+++ b/tex_files/chapter-shiny.tex
@@ -67,7 +67,7 @@ This is the same as spatial modelling, but this time the user has the option to 
     \label{fig:sweden}
 \end{figure}
 The same tables used in the Spatial Modelling tab are also used here and contain the same functionality. \\
-The dashboard can be accessed via the following IP address:
+The dashboard can be accessed via the following link:
 \begin{center}
-    \href{http://194.163.140.89:3838/}{http://194.163.140.89:3838/}
+    \href{https://dashboard.f-hahn.de/}{https://dashboard.f-hahn.de/}
 \end{center}
